# dbx-test-bundle

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: databricks-ci-cd.yml  main.yml
resources/: sample_job.job.yml
src/: sample_notebook.ipynb
