[project]
name = "my_project"
version = "0.0.1"
authors = [{ name = "bhawukarora042@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Runtime dependencies go here
]

[dependency-groups]
dev = [
    "ruff",
    "ipykernel",
]

test = [
    "pytest",
    "pytest-cov",
]

databricks = [
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[project.scripts]
main = "my_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120